@@ -19,7 +19,6 @@ package org.graylog2.contentpacks.facades;
 import com.fasterxml.jackson.databind.JsonNode;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import com.fasterxml.jackson.databind.jsontype.NamedType;
-import com.google.common.collect.ImmutableList;
 import com.google.common.collect.ImmutableMap;
 import com.google.common.collect.ImmutableSet;
 import com.google.common.graph.Graph;
@@ -48,9 +47,10 @@ import org.graylog.plugins.views.search.views.widgets.aggregation.AggregationCon
 import org.graylog.plugins.views.search.views.widgets.aggregation.AutoIntervalDTO;
 import org.graylog.plugins.views.search.views.widgets.aggregation.TimeHistogramConfigDTO;
 import org.graylog.plugins.views.search.views.widgets.messagelist.MessageListConfigDTO;
-import org.graylog.security.entities.EntityOwnershipService;
+import org.graylog.security.entities.EntityRegistrar;
+import org.graylog.testing.mongodb.MongoDBExtension;
 import org.graylog.testing.mongodb.MongoDBFixtures;
-import org.graylog.testing.mongodb.MongoDBInstance;
+import org.graylog.testing.mongodb.MongoDBTestService;
 import org.graylog2.bindings.providers.MongoJackObjectMapperProvider;
 import org.graylog2.contentpacks.EntityDescriptorIds;
 import org.graylog2.contentpacks.model.ModelId;
@@ -71,21 +71,23 @@ import org.graylog2.contentpacks.model.entities.ViewStateEntity;
 import org.graylog2.contentpacks.model.entities.references.ValueReference;
 import org.graylog2.database.MongoCollections;
 import org.graylog2.database.MongoConnection;
+import org.graylog2.database.entities.source.EntitySourceService;
 import org.graylog2.plugin.cluster.ClusterConfigService;
 import org.graylog2.plugin.indexer.searches.timeranges.KeywordRange;
 import org.graylog2.security.PasswordAlgorithmFactory;
 import org.graylog2.shared.bindings.providers.ObjectMapperProvider;
 import org.graylog2.shared.security.Permissions;
 import org.graylog2.shared.users.UserService;
-import org.graylog2.streams.StreamImpl;
+import org.graylog2.streams.StreamMock;
 import org.graylog2.users.UserImpl;
 import org.joda.time.DateTime;
 import org.joda.time.DateTimeZone;
-import org.junit.Before;
-import org.junit.Rule;
-import org.junit.Test;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.extension.ExtendWith;
 
 import java.util.Collections;
+import java.util.List;
 import java.util.Map;
 import java.util.Optional;
 import java.util.Set;
@@ -94,16 +96,14 @@ import static org.assertj.core.api.Assertions.assertThat;
 import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.when;
 
+@ExtendWith(MongoDBExtension.class)
 public class ViewFacadeTest {
-    @Rule
-    public final MongoDBInstance mongodb = MongoDBInstance.createForClass();
 
     private final ObjectMapper objectMapper = new ObjectMapperProvider().get();
 
     public static class TestSearchDBService extends SearchDbService {
-        protected TestSearchDBService(MongoConnection mongoConnection,
-                                      MongoJackObjectMapperProvider mapper) {
-            super(new MongoCollections(mapper, mongoConnection), dto -> new SearchRequirements(Collections.emptySet(), dto), new IgnoreSearchFilters());
+        protected TestSearchDBService(MongoCollections mongoCollections) {
+            super(mongoCollections, dto -> new SearchRequirements(Collections.emptySet(), dto), new IgnoreSearchFilters());
         }
     }
 
@@ -111,16 +111,13 @@ public class ViewFacadeTest {
         protected TestViewService(ClusterConfigService clusterConfigService,
                                   MongoCollections mongoCollections) {
             super(clusterConfigService,
-                    dto -> new ViewRequirements(Collections.emptySet(), dto), mock(EntityOwnershipService.class), mock(ViewSummaryService.class), mongoCollections);
+                    dto -> new ViewRequirements(Collections.emptySet(), dto), mock(EntityRegistrar.class), mock(ViewSummaryService.class), mock(EntitySourceService.class), mongoCollections);
         }
     }
 
     public static class TestViewSummaryService extends ViewSummaryService {
-        protected TestViewSummaryService(MongoConnection mongoConnection,
-                                         MongoJackObjectMapperProvider mongoJackObjectMapperProvider,
-                                         MongoCollections mongoCollections) {
-            super(mongoConnection, mongoJackObjectMapperProvider, mongoCollections);
-
+        protected TestViewSummaryService(MongoCollections mongoCollections) {
+            super(mongoCollections);
         }
     }
 
@@ -132,10 +129,10 @@ public class ViewFacadeTest {
     private final String newStreamId = "5def958063303ae5f68ebeaf";
     private final String streamId = "5cdab2293d27467fbe9e8a72"; /* stored in database */
     private UserService userService;
+    private EntityRegistrar entityRegistrar;
 
-
-    @Before
-    public void setUp() {
+    @BeforeEach
+    public void setUp(MongoDBTestService dbTestService) {
         objectMapper.registerSubtypes(new NamedType(AggregationConfigDTO.class, AggregationConfigDTO.NAME));
         objectMapper.registerSubtypes(new NamedType(MessageListConfigDTO.class, MessageListConfigDTO.NAME));
         objectMapper.registerSubtypes(new NamedType(TimeHistogramConfigDTO.class, TimeHistogramConfigDTO.NAME));
@@ -149,15 +146,16 @@ public class ViewFacadeTest {
         objectMapper.registerSubtypes(MessageList.class);
         objectMapper.registerSubtypes(Pivot.class);
         objectMapper.registerSubtypes(EventList.class);
-        final MongoConnection mongoConnection = mongodb.mongoConnection();
+        final MongoConnection mongoConnection = dbTestService.mongoConnection();
         final MongoJackObjectMapperProvider mapper = new MongoJackObjectMapperProvider(objectMapper);
-        final MongoCollections mongoCollections = new MongoCollections(mapper, mongoConnection);
-        searchDbService = new TestSearchDBService(mongoConnection, mapper);
+        final var mongoCollections = new MongoCollections(mapper, mongoConnection);
+        searchDbService = new TestSearchDBService(mongoCollections);
         viewService = new TestViewService(null, mongoCollections);
-        viewSummaryService = new TestViewSummaryService(mongoConnection, mapper, mongoCollections);
+        viewSummaryService = new TestViewSummaryService(mongoCollections);
         userService = mock(UserService.class);
+        entityRegistrar = mock(EntityRegistrar.class);
 
-        facade = new SearchFacade(objectMapper, searchDbService, viewService, viewSummaryService, userService);
+        facade = new SearchFacade(objectMapper, searchDbService, viewService, viewSummaryService, userService, entityRegistrar);
     }
 
     @Test
@@ -232,11 +230,11 @@ public class ViewFacadeTest {
     @Test
     @MongoDBFixtures("ViewFacadeTest.json")
     public void itShouldCreateADTOFromAnEntity() throws Exception {
-        final StreamImpl stream = new StreamImpl(Collections.emptyMap());
+        final StreamMock stream = new StreamMock(Collections.emptyMap());
         final Entity viewEntity = createViewEntity();
         final Map<EntityDescriptor, Object> nativeEntities = Map.of(EntityDescriptor.create(newStreamId, ModelTypes.STREAM_V1), stream);
-        final UserImpl fakeUser = new UserImpl(mock(PasswordAlgorithmFactory.class), new Permissions(ImmutableSet.of()),
-                mock(ClusterConfigService.class), ImmutableMap.of("username", "testuser"));
+        final UserImpl fakeUser = new UserImpl(mock(PasswordAlgorithmFactory.class), new Permissions(Set.of()),
+                mock(ClusterConfigService.class), new ObjectMapperProvider().get(), ImmutableMap.of("username", "testuser"));
         when(userService.load("testuser")).thenReturn(fakeUser);
         final NativeEntity<ViewDTO> nativeEntity = facade.createNativeEntity(viewEntity,
                 Collections.emptyMap(), nativeEntities, "testuser");
@@ -284,12 +282,13 @@ public class ViewFacadeTest {
                 ValueReference.of("description"),
                 ValueReference.of(false),
                 ValueReference.of("matching-type"),
-                ImmutableList.of(),
-                ImmutableList.of(),
-                ImmutableList.of(),
-                ImmutableSet.of(),
+                List.of(),
+                List.of(),
+                List.of(),
+                Set.of(),
                 ValueReference.of(false),
-                ValueReference.of(true)
+                ValueReference.of(true),
+                List.of()
         );
         return EntityV1.builder()
                 .id(ModelId.of(newStreamId))
@@ -308,16 +307,16 @@ public class ViewFacadeTest {
         final SearchEntity searchEntity = SearchEntity.builder()
                 .queries(ImmutableSet.of(query))
                 .parameters(ImmutableSet.of())
-                .requires(ImmutableMap.of())
+                .requires(Map.of())
                 .createdAt(DateTime.now(DateTimeZone.UTC))
                 .build();
         final ViewStateEntity viewStateEntity = ViewStateEntity.builder()
-                .fields(ImmutableSet.of())
+                .fields(Set.of())
                 .titles(Titles.empty())
-                .widgets(ImmutableSet.of())
-                .widgetMapping(ImmutableMap.of())
-                .widgetPositions(ImmutableMap.of())
-                .formatting(FormattingSettings.builder().highlighting(ImmutableSet.of()).build())
+                .widgets(Set.of())
+                .widgetMapping(Map.of())
+                .widgetPositions(Map.of())
+                .formatting(FormattingSettings.builder().highlighting(List.of()).build())
                 .displayModeSettings(DisplayModeSettings.empty())
                 .build();
         String newViewId = "5def958063303ae5f68edead";
@@ -327,8 +326,8 @@ public class ViewFacadeTest {
                 .title(ValueReference.of("title"))
                 .description(ValueReference.of("description"))
                 .search(searchEntity)
-                .properties(ImmutableSet.of())
-                .requires(ImmutableMap.of())
+                .properties(Set.of())
+                .requires(Map.of())
                 .state(ImmutableMap.of(newViewId, viewStateEntity))
                 .createdAt(DateTime.now(DateTimeZone.UTC))
                 .build();
